# epiclock

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
epi-clocks-review/: report.md
epi-clocks-review/notes/: entropy.md  errors.md  model-summary.md  report-structure.md
src/epiclock/: __init__.py  assets.py  clocks.py  skeleton.py
tests/: conftest.py  test_skeleton.py
