[metadata]
name = epiclock
description = Add a short description here!
author = t-silvers
author_email = silvers@molgen.mpg.de
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/pyscaffold/pyscaffold/
project_urls =
    Documentation = https://pyscaffold.org/

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    dowhy
    github
    importlib-metadata
    numpy
    pandas
    rdata
    scikit-learn
    xarray

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]

testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --cov epiclock --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.4.1
package = epiclock
